Mejoras en la funcionalidad de la clase